	fixes Savannah bug #42070 reported by David Lawrence Ramsey.
	* src/global.c (shortcut_init), src/help.c (do_help): Add the
	shortcuts M-\ and M-/ for First Line and Last Line to the help
	viewer, instead of ^Y and ^V, which are already taken for Page
	Up and Page Down.  Also, stop them from aborting the viewer.
	* src/help.c (do_help): Remove superfluous abortion variable.

2014-04-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/{proto.h,cut.c,nano.c,text.c}: Remove the unused parameter
	'file_bot' from copy_from_filestruct(), and rename the other.
	* src/*: Remove the unused parameter 'func_key' from get_shortcut(),
	and subsequently from parse_browser_input() and parse_help_input().
	* src/*: Adjust some whitespace and tweak a few comments.
	* src/winio.c (getfuncfromkey): Elide variable and condense comment.
	* src/text.c (break_line): Initialize a variable to avoid a compiler
	warning, rename it to be more apt, add a comment, tweak some others,
	and remove an unneeded 'if'.
	* src/char.c (move_mbleft): Avoid a compiler warning (int → size_t),
	rename the variable, and another, and straighten out the logic.

2014-04-13  Benno Schulenberg  <bensberg@justemail.net>
	* proto.h, global.c, rcfile.c: Remove the unused parameter 'menu'
	from strtosc().
	* global.c (shortcut_init): Remove mistaken browser item from the
	Go-To-Line menu.
	* global.c (shortcut_init): Delete a misplaced setting of 'currmenu'.
	* global.c (shortcut_init, strtomenu): Cosmetic tweaks.
	* doc/syntax/{changelog,c,po}.nanorc: Some small extra colourings.
	* configure.ac, doc/texinfo/nano.texi: Make --enable-tiny disable
	the use of libmagic, and document the --disable-libmagic flag.
	* src/nano.c (version): Print the correct --enable/--disable option.
	* configure.ac, src/*, doc/texinfo/nano.texi: Convert all occurrences
	of #ifdef ENABLE_NANORC to #ifndef DISABLE_NANORC, and adapt for it.
	* configure.ac: Complain about --enable-color without --enable-nanorc.
