@@ -11,6 +11,9 @@
 	viewer, instead of ^Y and ^V, which are already taken for Page
 	Up and Page Down.  Also, stop them from aborting the viewer.
 	* src/help.c (do_help): Remove superfluous abortion variable.
+	* src/global.c (shortcut_init), src/help.c (do_help): Add the
+	shortcut ^L for Refresh to the help viewer and stop it aborting;
+	a changed version of patch #7013 from David Lawrence Ramsey.
 
 2014-04-14  Benno Schulenberg  <bensberg@justemail.net>
 	* src/{proto.h,cut.c,nano.c,text.c}: Remove the unused parameter
